--- a/blog/10-Best-Practices-for-Writing-Clean-and-Maintainable-Code/Post.css
+++ b/blog/10-Best-Practices-for-Writing-Clean-and-Maintainable-Code/Post.css
@@ -1,1 +1,78 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
 
+body {
+  font-family: "Poppins", sans-serif !important ;
+ background-color:#fcfcfc;
+
+}
+
+h1{
+  font-size:2em;
+  margin-top:100px;
+  padding:10px; 
+  margin-right:auto;
+  margin-left:auto;
+  max-width:920px;
+}
+
+h3{
+font-size:1.5em;
+}
+
+.carbon-ad{
+bottom:2rem;
+position:sticky;
+}
+
+.text-secondary{
+max-width:920px;
+margin-right:auto;
+margin-left:auto;
+}
+
+.code-box {
+  width: 90%;
+  padding:10px;
+  background-color: #1c1c1c;
+  overflow: auto;
+  border-radius:0.6rem;
+}
+
+pre {
+  font-size: 14px;
+  font-family: monospace;
+  line-height: 1.6;
+  height:auto;
+}
+
+.code-box code {
+  color: #fff;
+}
+
+@media (max-width: 600px) {
+  .code-box {
+    width: 100%;
+    height: auto;
+  }
+}
+img{
+  max-width:920px;
+  border-radius:0.5em;
+}
+
+a{
+text-decoration:none;
+  color:blue;
+}
+
+
+
+
+
+
+  
+
+
+
+
+ 
