--- a/newsletter.css
+++ b/newsletter.css
@@ -1,1 +1,192 @@
 
+.Container {
+  width: 360px;
+}
+
+.Subscribe {
+  height: 250px;
+  padding: 30px;
+  overflow: hidden;
+  position: relative;
+  border-radius: 6px;
+  margin-bottom: 20px;
+  background-color: white;
+  box-shadow: 0 6px 10px 0 rgba(149,144,179,0.15),
+    0 15px 50px 0 rgba(182,182,224,0.10);
+}
+
+
+
+.Subscribe h3 {
+  color: Black;
+  font-size: 22px;
+  margin-bottom: 15px;
+  transition: opacity 900ms 150ms cubic-bezier(0.2, 0, 0, 1), transform 900ms 150ms cubic-bezier(0.2, 0, 0, 1);
+}
+
+.Subscribe p {
+  color: #827C8C;
+  font-size: 15px;
+  line-height: 24px;
+  margin-bottom: 30px;
+  transition: opacity 900ms 100ms cubic-bezier(0.2, 0, 0, 1), transform 900ms 100ms cubic-bezier(0.2, 0, 0, 1);
+}
+
+.Subscribe form {
+  z-index: 2;
+  left: 20px;
+  width: 320px;
+  height: 46px;
+  bottom: 25px;
+  overflow: hidden;
+  position: absolute;
+  border-radius: 4px;
+  background: #FFFFFF;
+  box-shadow: 0 3px 6px 0 rgba(149,144,179,0.20);
+  transition: transform 600ms cubic-bezier(0.2, 0, 0, 1);
+}
+
+.Subscribe form::after {
+  top: 0;
+  content: "";
+  width: 30px;
+  height: 100%;
+  right: 110px;
+  position: absolute;
+  background: linear-gradient(90deg, rgba(white, 0), rgba(white, 1))
+}
+
+.Subscribe form input[type=text] {
+  border: none;
+  width: 100%;
+  height: 100%;
+  outline: none;
+  font-size: 15px;
+  padding: 0 110px 0 20px;
+  font-family: 'Open Sans', sans-serif;
+}
+
+.Subscribe form button {
+  top: 0;
+  right: 0;
+  padding: 0;
+  cursor: pointer;
+  outline: none;
+  width: 110px;
+  border: none;
+  height: 100%;
+  color: white;
+  font-size: 15px;
+  position: absolute;
+  background-color: #ff3153;
+   }
+
+.Loading {
+  left: 0;
+  opacity: 0;
+  z-index: 0;
+  width: 100%;
+  bottom: 50px;
+  position: absolute;
+  text-align: center;
+  potiner-events: none;
+  transition: opacity 900ms 0s cubic-bezier(0.2, 0, 0, 1), transform 900ms 0s cubic-bezier(0.2, 0, 0, 1);
+  
+  .LoadingDot {
+    width: 6px;
+    opacity: 0;
+    height: 6px;
+    margin: 0 1px;
+    border-radius: 50%;
+    display: inline-block;
+    background-color: #B6B6CF;
+  }
+  
+  .LoadingDot:nth-child(1) {
+    animation: loading 2s 0ms infinite;
+  }
+  
+  .LoadingDot:nth-child(2) {
+    animation: loading 2s 200ms infinite;
+  }
+  
+  .LoadingDot:nth-child(3) {
+    animation: loading 2s 400ms infinite;
+  }
+  
+  .LoadingDot:nth-child(4) {
+    animation: loading 2s 600ms infinite;
+  }
+
+  span {
+    color: #B6B6CF;
+    display: block;
+    font-size: 12px;
+    margin-top: 15px;
+  }
+}
+
+@keyframes loading {
+  0% { opacity: 0; transform: scale(0.5) }
+  33% { opacity: 1; transform: scale(1) }
+  66% { opacity: 0; transform: scale(0.5)}
+}
+
+.Complete {
+  left: 0;
+  top: 50px;
+  width: 100%;
+  padding: 0 30px;
+  text-align: center;
+  position: absolute;
+  
+  .Tick {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    margin-bottom: 30px;
+    display: inline-block;
+    background-color: #ff3153 ;
+    
+    svg {
+      opacity: 0;
+      margin-top: 28px;
+      transform: scale(0.5);
+      transition: opacity, 400ms 500ms, transform 300ms 500ms cubic-bezier(0.2, 0, 0, 1.2);
+    }
+    
+    opacity: 0;
+    transform: scale(.5);
+    transition:
+      opacity 600ms 200ms,
+      transform 600ms 200ms;
+  }
+
+
+
+      transform: rotate(0) translateY(100px);
+  }
+  .Loading {opacity: 1; pointer-events: all }
+}
+
+.Subscribe--complete {
+  .Loading { opacity: 0; transform: translateY(100px) }
+  h3 { transform: translateY(100px); opacity: 0; }
+  p { transform: translateY(100px); opacity: 0; }
+  .Complete .Tick {
+    opacity: 1;
+    transform: scale(1);
+  }
+  .Complete .Tick svg {
+    opacity: 1;
+    transform: scale(1);
+  }
+
+    .Complete h4,
+  .Complete span {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+
