--- a/newsletter.css
+++ b/newsletter.css
@@ -18,15 +18,15 @@
 
 
 .Subscribe h3 {
-  color: Blue;
-  font-size: 12px;
+  color: Black;
+  font-size: 17px;
   margin-bottom: 15px;
   transition: opacity 900ms 150ms cubic-bezier(0.2, 0, 0, 1), transform 900ms 150ms cubic-bezier(0.2, 0, 0, 1);
 }
 
 .Subscribe p {
   color: #827C8C;
-  font-size: 15px;
+  font-size: 13px;
   line-height: 24px;
   margin-bottom: 30px;
   transition: opacity 900ms 100ms cubic-bezier(0.2, 0, 0, 1), transform 900ms 100ms cubic-bezier(0.2, 0, 0, 1);
@@ -35,7 +35,7 @@
 .Subscribe form {
   z-index: 2;
   left: 20px;
-  width: 320px;
+  width: auto;
   height: 46px;
   bottom: 25px;
   overflow: hidden;
