--- a/newsletter.css
+++ b/newsletter.css
@@ -92,6 +92,7 @@
   text-align: center;
   potiner-events: none;
   transition: opacity 900ms 0s cubic-bezier(0.2, 0, 0, 1), transform 900ms 0s cubic-bezier(0.2, 0, 0, 1);
+}
   
   .LoadingDot {
     width: 6px;
