--- a/newsletter.css
+++ b/newsletter.css
@@ -92,7 +92,7 @@
   text-align: center;
   potiner-events: none;
   transition: opacity 900ms 0s cubic-bezier(0.2, 0, 0, 1), transform 900ms 0s cubic-bezier(0.2, 0, 0, 1);
-}
+  }
   
   .LoadingDot {
     width: 6px;
@@ -120,20 +120,27 @@
     animation: loading 2s 600ms infinite;
   }
 
-  span {
-    color: #B6B6CF;
-    display: block;
-    font-size: 12px;
-    margin-top: 15px;
-  }
+ .Loading span {
+  color: #B6B6CF;
+  display: block;
+  font-size: 12px;
+  margin-top: 15px;
 }
 
 @keyframes loading {
-  0% { opacity: 0; transform: scale(0.5) }
-  33% { opacity: 1; transform: scale(1) }
-  66% { opacity: 0; transform: scale(0.5)}
+  0% {
+    opacity: 0;
+    transform: scale(0.5);
+  }
+  33% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  66% {
+    opacity: 0;
+    transform: scale(0.5);
+  }
 }
-
 .Complete {
   left: 0;
   top: 50px;
@@ -141,54 +148,77 @@
   padding: 0 30px;
   text-align: center;
   position: absolute;
-  
-  .Tick {
-    width: 80px;
-    height: 80px;
-    border-radius: 50%;
-    margin-bottom: 30px;
-    display: inline-block;
-    background-color: #ff3153 ;
-    
-    svg {
-      opacity: 0;
-      margin-top: 28px;
-      transform: scale(0.5);
-      transition: opacity, 400ms 500ms, transform 300ms 500ms cubic-bezier(0.2, 0, 0, 1.2);
-    }
-    
-    opacity: 0;
-    transform: scale(.5);
-    transition:
-      opacity 600ms 200ms,
-      transform 600ms 200ms;
-  }
-
-
-
-      transform: rotate(0) translateY(100px);
-  }
-  .Loading {opacity: 1; pointer-events: all }
+}
+.Complete .Tick {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  margin-bottom: 30px;
+  display: inline-block;
+  background-color: #ff3153;
+  opacity: 0;
+  transform: scale(0.5);
+  transition: opacity 600ms 200ms, transform 600ms 200ms;
+}
+.Complete .Tick svg {
+  opacity: 0;
+  margin-top: 28px;
+  transform: scale(0.5);
+  transition: opacity, 400ms 500ms, transform 300ms 500ms cubic-bezier(0.2, 0, 0, 1.2);
+}
+.Complete h4 {
+  font-size: 14px;
+  font-weight: 600;
+  margin-bottom: 10px;
+  opacity: 0;
+  transform: translateY(-15px);
+  transition: opacity 600ms 450ms, transform 600ms 450ms;
+}
+.Complete span {
+  opacity: 0;
+  color: #827C8C;
+  display: block;
+  font-size: 14px;
+  transform: translateY(-15px);
+  transition: opacity 600ms 400ms, transform 600ms 400ms;
 }
 
-.Subscribe--complete {
-  .Loading { opacity: 0; transform: translateY(100px) }
-  h3 { transform: translateY(100px); opacity: 0; }
-  p { transform: translateY(100px); opacity: 0; }
-  .Complete .Tick {
-    opacity: 1;
-    transform: scale(1);
-  }
-  .Complete .Tick svg {
-    opacity: 1;
-    transform: scale(1);
-  }
-
-    .Complete h4,
-  .Complete span {
-    opacity: 1;
-    transform: translateY(0);
-  }
+.Subscribe--loading form,
+.Subscribe--complete form {
+  transform: translateY(100px);
+}
+.Subscribe--loading::after,
+.Subscribe--complete::after {
+  transform: rotate(0) translateY(100px);
+}
+.Subscribe--loading .Loading,
+.Subscribe--complete .Loading {
+  opacity: 1;
+  pointer-events: all;
 }
 
-
+.Subscribe--complete .Loading {
+  opacity: 0;
+  transform: translateY(100px);
+}
+.Subscribe--complete h3 {
+  transform: translateY(100px);
+  opacity: 0;
+}
+.Subscribe--complete p {
+  transform: translateY(100px);
+  opacity: 0;
+}
+.Subscribe--complete .Complete .Tick {
+  opacity: 1;
+  transform: scale(1);
+}
+.Subscribe--complete .Complete .Tick svg {
+  opacity: 1;
+  transform: scale(1);
+}
+.Subscribe--complete .Complete h4,
+.Subscribe--complete .Complete span {
+  opacity: 1;
+  transform: translateY(0);
+}
