--- a/newsletter.css
+++ b/newsletter.css
@@ -4,7 +4,7 @@
 }
 
 .Subscribe {
-  height: auto;
+  height: 220px;
   padding: 28px;
   overflow: hidden;
   position: relative;
@@ -32,73 +32,192 @@
   transition: opacity 900ms 100ms cubic-bezier(0.2, 0, 0, 1), transform 900ms 100ms cubic-bezier(0.2, 0, 0, 1);
 }
 
-main label,
-input,
-textarea {
-    display: block;
-    width: 100%;
-}
-.Subscribe ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-}
-
-.Subscribe li {
-    padding: 0.3em;
-}
-.Subscribe span {
-    font-weight: 700;
-    color: #102a43;
-    line-height: 35px;
-    line-height: 2.5rem;
-    font-size: 12px;
-    font-size: 0.8rem;
-    text-transform: uppercase;
-}
-.Subscribe input[type="submit"] {
-    background: #fc4366;
-    color: white;
-    font-weight: 700;
-    font-size: 1.2rem;
-    border-radius: 5px;
-    margin-top: 1.3em;
-}
-
-.Subscribe .formly {
-    width: 100%;
-    margin: 1.5em auto ;
-}
 .Subscribe form {
-    background-color: #ffffff;
-    padding-top: 40px;
-    padding-right: 40px;
-    padding-bottom: 40px;
-    padding-left: 40px;
-    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1);
-    border-radius: 3px;
-    overflow: hidden;
+  z-index: 2;
+  left: 28px;
+  width: auto;
+  margin-right:28px; 
+  height: 35px;
+  bottom: 25px;
+  overflow: hidden;
+  position: absolute;
+  border-radius: 4px;
+  background: #FFFFFF;
+  box-shadow: 0 3px 6px 0 rgba(149,144,179,0.20);
+  transition: transform 600ms cubic-bezier(0.2, 0, 0, 1);
 }
 
-.Subscribe .required-star {
-    color: #fc4366;
+.Subscribe form::after {
+  top: 0;
+  content: "";
+  width: 13px;
+  height: 100%;
+  right: 95px;
+  position: absolute;
+  background: linear-gradient(90deg, rgba(white, 0), rgba(white, 1))
 }
 
-.Subscribe input,
-textarea {
-    width: 100%;
-    padding: 9px 20px;
-    border: 1px solid #e1e2eb;
-    background-color: #fff;
-    color: #102a43;
-    caret-color: #829ab1;
-    box-sizing: border-box;
-    font-size: 14px;
-    font-size: 1rem;
-    line-height: 29px;
-    line-height: 2rem;
-    box-shadow: inset 0 2px 4px 0 rgba(206, 209, 224, 0.2);
-    border-radius: 3px;
-    line-height: 29px;
-    line-height: 2rem;
+.Subscribe form input[type=text] {
+  border: none;
+  width: 100%;
+  height: 100%;
+  outline: none;
+  font-size: 13px;
+  padding: 0 110px 0 10px;
+  font-family: 'Open Sans', sans-serif;
+}
+
+#button {
+  top: 0;
+  right: 0;
+  padding: 0;
+  cursor: pointer;
+  outline: none;
+  width: 85px;
+  border: none;
+  height: 100%;
+  color: white;
+  font-size: 13px;
+  position: absolute;
+  background-color: #ff3153;
+   }
+
+.Loading {
+  left: 0;
+  opacity: 0;
+  z-index: 0;
+  width: 100%;
+  bottom: 30px;
+  position: absolute;
+  text-align: center;
+  transition: opacity 900ms 0s cubic-bezier(0.2, 0, 0, 1), transform 900ms 0s cubic-bezier(0.2, 0, 0, 1);
+  }
+  
+  .LoadingDot {
+    width: 6px;
+    opacity: 0;
+    height: 6px;
+    margin: 0 1px;
+    border-radius: 50%;
+    display: inline-block;
+    background-color: #B6B6CF;
+  }
+  
+  .LoadingDot:nth-child(1) {
+    animation: loading 2s 0ms infinite;
+  }
+  
+  .LoadingDot:nth-child(2) {
+    animation: loading 2s 200ms infinite;
+  }
+  
+  .LoadingDot:nth-child(3) {
+    animation: loading 2s 400ms infinite;
+  }
+  
+  .LoadingDot:nth-child(4) {
+    animation: loading 2s 600ms infinite;
+  }
+
+ .Loading span {
+  color: #B6B6CF;
+  display: block;
+  font-size: 12px;
+  margin-top: 15px;
+}
+
+@keyframes loading {
+  0% {
+    opacity: 0;
+    transform: scale(0.5);
+  }
+  33% {
+    opacity: 1;
+    transform: scale(1);
+  }
+  66% {
+    opacity: 0;
+    transform: scale(0.5);
+  }
+}
+.Complete {
+  left: 0;
+  top: 50px;
+  width: 100%;
+  padding: 0 30px;
+  text-align: center;
+  position: absolute;
+}
+.Complete .Tick {
+  width: 80px;
+  height: 80px;
+  border-radius: 50%;
+  margin-bottom: 30px;
+  display: inline-block;
+  background-color: #ff3153;
+  opacity: 0;
+  transform: scale(0.5);
+  transition: opacity 600ms 200ms, transform 600ms 200ms;
+}
+.Complete .Tick svg {
+  opacity: 0;
+  margin-top: 28px;
+  transform: scale(0.5);
+  transition: opacity, 400ms 500ms, transform 300ms 500ms cubic-bezier(0.2, 0, 0, 1.2);
+}
+.Complete h4 {
+  font-size: 14px;
+  font-weight: 600;
+  margin-bottom: 10px;
+  opacity: 0;
+  transform: translateY(-15px);
+  transition: opacity 600ms 450ms, transform 600ms 450ms;
+}
+.Complete span {
+  opacity: 0;
+  color: #827C8C;
+  display: block;
+  font-size: 14px;
+  transform: translateY(-15px);
+  transition: opacity 600ms 400ms, transform 600ms 400ms;
+}
+
+.Subscribe--loading form,
+.Subscribe--complete form {
+  transform: translateY(100px);
+}
+.Subscribe--loading::after,
+.Subscribe--complete::after {
+  transform: rotate(0) translateY(100px);
+}
+.Subscribe--loading .Loading,
+.Subscribe--complete .Loading {
+  opacity: 1;
+  pointer-events: all;
+}
+
+.Subscribe--complete .Loading {
+  opacity: 0;
+  transform: translateY(100px);
+}
+.Subscribe--complete h3 {
+  transform: translateY(100px);
+  opacity: 0;
+}
+.Subscribe--complete p {
+  transform: translateY(100px);
+  opacity: 0;
+}
+.Subscribe--complete .Complete .Tick {
+  opacity: 1;
+  transform: scale(1);
+}
+.Subscribe--complete .Complete .Tick svg {
+  opacity: 1;
+  transform: scale(1);
+}
+.Subscribe--complete .Complete h4,
+.Subscribe--complete .Complete span {
+  opacity: 1;
+  transform: translateY(0);
 }
