--- a/newsletter.css
+++ b/newsletter.css
@@ -57,7 +57,7 @@
   background: linear-gradient(90deg, rgba(white, 0), rgba(white, 1))
 }
 
-.Subscribe form input[type=text] {
+.Subscribe form input[type=email] {
   border: none;
   width: 100%;
   height: 100%;
