--- a/newsletter.css
+++ b/newsletter.css
@@ -68,17 +68,52 @@
 }
 
 #button {
+  position: absolute; /* Ensures the button aligns within the form */
   top: 0;
   right: 0;
-  padding: 0;
-  cursor: pointer;
-  outline: none;
   width: 85px;
-  border: none;
   height: 100%;
+  border: none;
+  border-radius: 4px;
+  background-color: #ff3153;
   color: white;
   font-size: 13px;
-  position: absolute;
-  background-color: #ff3153;
-   }
+  text-transform: uppercase;
+  cursor: pointer;
+  font-weight: 600;
+  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease;
+}
+
+#button:hover, 
+#button:focus {
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+}
+
+#button span {
+  display: block;
+  text-align: center;
+  line-height: 38px;
+}
+
+.hide {
+  display: none;
+}
+
+.animated {
+  animation: short-press 0.75s cubic-bezier(0.770, 0.000, 0.175, 1.000) forwards;
+}
+
+@keyframes short-press {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(0.9);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
 
